4.2 EEVEE Cryptomatte pass no longer matches Cycles #125618

Closed
opened 2024-07-29 20:02:52 +02:00 by xZaki · 6 comments

System Information
Operating system: Windows 11
Graphics card: RTX-4460ti

Blender Version
Broken: 4.2.0, branch: blender-v4.2-release, commit date: 2024-07-16 06:20, hash: a51f293548, type: Release
Worked: 4.1.1
Short description of error

Cryptomatte Material Pick in Cycles:
image
Same setup in EEVEE:
image

It does still technically work in EEVEE, but the results aren't compatible anymore. And also using the picker gives what I assume to be a really large number.
image

Whether or not the CPU or GPU is used and the precision settings do not seem to affect anything.

Exact steps for others to reproduce the error
On the attached file:

  • Render the attached file in EEVEE, you'll get a fully black image.
  • Render the attached file in Cycles, you'll see the bottom 3 cubes and the top right cube.
    image
**System Information** Operating system: Windows 11 Graphics card: RTX-4460ti **Blender Version** Broken: 4.2.0, branch: blender-v4.2-release, commit date: 2024-07-16 06:20, hash: a51f293548ad, type: Release Worked: 4.1.1 **Short description of error** Cryptomatte Material Pick in Cycles: ![image](/attachments/56585ea7-7268-440b-a1d2-d71995f99a3a) Same setup in EEVEE: ![image](/attachments/f8f871d8-ada6-4b9d-8279-0c8387ab5cc4) It does still *technically* work in EEVEE, but the results aren't compatible anymore. And also using the picker gives what I assume to be a really large number. <img width="185" alt="image" src="attachments/f1feb103-dea0-4cba-a947-faf7bfbc4423"> Whether or not the CPU or GPU is used and the precision settings do not seem to affect anything. **Exact steps for others to reproduce the error** On the attached file: - Render the attached file in EEVEE, you'll get a fully black image. - Render the attached file in Cycles, you'll see the bottom 3 cubes and the top right cube. ![image](/attachments/04e1f2bd-498a-4c90-92dd-8e5dfadba2a0)
xZaki added the
Type
Report
Severity
Normal
Status
Needs Triage
labels 2024-07-29 20:02:52 +02:00
Member

I can confirm this issue in 4.2 and 4.3

I can confirm this issue in 4.2 and 4.3
Alaska changed title from Cryptomatte Material Mode broken in EEVEE to 4.2 EEVEE Cryptomatte pass no longer matches Cycles 2024-07-30 06:20:42 +02:00
Jeroen Bakker self-assigned this 2024-08-13 08:11:38 +02:00
Member

Seems only be incorrect for the material passes, Object and assets are working

Seems only be incorrect for the material passes, Object and assets are working
Jeroen Bakker added this to the Viewport & EEVEE project 2024-08-13 10:52:17 +02:00
Jeroen Bakker added this to the 4.3 milestone 2024-08-13 10:52:19 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-08-13 11:29:11 +02:00

Matte ID is still number instead of material name on the most recent build 8f996f1786

Matte ID is still number instead of material name on the most recent build 8f996f178604 <img src="/attachments/f1feb103-dea0-4cba-a947-faf7bfbc4423" alt="">
Blender Bot added
Status
Needs Triage
and removed
Status
Resolved
labels 2024-08-15 08:04:01 +02:00
Member

Yes you're correct. I identified an oversight in previous fix.
Sorry for that.

Yes you're correct. I identified an oversight in previous fix. Sorry for that.
Blender Bot added
Status
Resolved
and removed
Status
Needs Triage
labels 2024-08-15 08:41:32 +02:00

This was not backported to 4.2.1? Man.

This was not backported to 4.2.1? Man.
Member

According to the LTS backport list, the fix was backported to 4.2.1, and in my testing it works here with 4.2.1.

Is it not working @MikhailRachinskiy ? If so, you should probably make a new bug report for it.

According to the LTS backport list, the fix was backported to 4.2.1, and in my testing it works here with 4.2.1. Is it not working @MikhailRachinskiy ? If so, you should probably make a new bug report for it.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#125618
No description provided.