Fix #125618: EEVEE: Cryptomatte Material Layer Incorrect

Missing oversight in previous fix where incorrect name size where
used to generate the cryptomatte hash.

Pull Request: https://projects.blender.org/blender/blender/pulls/126352